PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 6.8.0 Milestone 3
28 November 2016

- pts-core: Ubuntu external dependency script fix
- phodevi: Improved video RAM detection via GLX_MESA_query_renderer
- phodevi: GPU detection improvements
- phodevi: vRAM detection change to help AMDGPU-PRO
- phodevi: Other product/model string improvements

Phoronix Test Suite 6.8.0 Milestone 2
15 November 2016

- pts-core: Add new remove_inactive_systems option on systems page
- pts-core: Fix malforming graphs when feeding many line graph results that are in a tracking-like manner that should be compacted to box plot
- pts-core: Add PHP GD check as first thing when attempting to use result-file-to-pdf
- pts-core: Add new module hooks for __test_log_output() and __post_test_run_system_logs()
- phodevi: Don't load Phodevi sensors prior to PHP 5.3 due to compatibility issues
- log_exporter: Allow easily exporting test run and system logs via COPY_TEST_RUN_LOGS_TO and COPY_SYSTEM_LOGS_TO env vars
- flamegrapher: Experimental new module to generate Linux perf / FlameGraph graphs for each test being executed when active
- results_custom_export: Example module for dumping PTS test results in custom formats
- pts_Graph: Add Intel color highlighting for "Celeron" too

Phoronix Test Suite 6.8.0 Milestone 1
27 October 2016

- pts-core: Add PHOROMATIC_HTTP_PORT environment variable for overriding Phoromatic Server HTTP port on starting it
- pts-core: Don't preserve really large system logs (~1MB or greater per file)
- pts-core: Strip http/https from proxy address if needed
- pts-core: Update Solus external dependency handling
- pts-core: Proper handling for when PHP ctype functions are not present
- phodevi: Also look for Vulkan ICDs at /usr/share/vulkan/icd.d/*.json

Phoronix Test Suite 6.6.1
29 September 2016

- pts-core: Various BSD improvements
- pts-core: Add list-not-installed-tests command (alias: list-uninstalled-tests)