@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- phoromatic: allow clearing warnings/errors of a system from the systems page
+
 Phoronix Test Suite 6.8.0 Milestone 3
 28 November 2016
 
